MINOR - Implemented the API to import anki flashcards
